# SmartGlasses

./: README.md  gmg.py  requirement.txt  setup_linux.py  setup_win.py
barcode_api/: README.md  barcode_engine.py
docs/: arch.drawio  logo.psd  prototype.psd
face_api/: README.md  dlib_cnn.py  dlib_hog.py  face_detector.py  face_engine.py  haar_cascade.py  mtcnn.py  opencv_face_detection.py  requirement.txt  ssd_mobilenet.py
face_api/data/: data.pkl
face_api/resources/mtcnn/: mtcnn.py
face_detection_recognition/: README.md  dlib_face_detection.py
hand_sign_api/: .gitignore  README.md  train_sign_classifier.py
image_caption/: README.md
infos_api/: README.md  news_engine.py  time_engine.py  weather_engine.py
money_api/: README.md
news_api/: README.md  news_engine.py
ocr/: README.md  requirement.txt
ocr/src/: main.cpp
ocr/targets/src/: SpellCheck.vcxproj  SpellCheck.vcxproj.filters  (+1 more)
ocr/text-detection-ctpn/: .gitignore
ocr/text-recognition/: tessesract_engine.py
ocr_api/: README.md  ctpn.py  ocr_engine.py  preprocessing.py  requirements.txt  tesseract_engine.py
ocr_api/text-detection-ctpn/: demo.py  demo_pb.py
speech_api/: README.md  requirement.txt  speech_engine.py
text-recognition/: CMakeLists.txt
text-recognition/targets/src/: CMakeLists.txt
text-recognition/targets/src/SpellCheck.dir/Release/SpellCheck.tlog/: CL.command.1.tlog  CL.read.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.write.1.tlog
translate_api/: README.md  translate_engine.py
wiki_api/: README.md  wiki_engine.py
(+8 files in other folders)
